noinst_LIBRARIES = libdummy.a

libdummy_a_SOURCES = atlas.c call_globals.c colour_coding.c \
	file.c georges.c line_ops.c marker_ops.c object_ops.c \
	polygon_ops.c quit.c regions.c render_ops.c segmenting.c \
	surf_segmenting.c surface_curves.c surface_extract.c \
	view_ops.c volume_ops.c volume_transform_ops.c

INCLUDES = -I$(top_srcdir)/Include -I$(top_srcdir)/Graphics/Include \
	$(MNI_INCLUDES) $(malloc_CFLAGS)
